deploy/production/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wuling
  labels:
    name: wuling
